--- a/Makefile.in
+++ b/Makefile.in
@@ -85,7 +85,8 @@ am_mutt_OBJECTS = addrbook.$(OBJEXT) alias.$(OBJEXT) attach.$(OBJEXT) \
 	system.$(OBJEXT) thread.$(OBJEXT) charset.$(OBJEXT) \
 	history.$(OBJEXT) lib.$(OBJEXT) muttlib.$(OBJEXT) \
 	editmsg.$(OBJEXT) mbyte.$(OBJEXT) url.$(OBJEXT) \
-	ascii.$(OBJEXT) crypt-mod.$(OBJEXT) safe_asprintf.$(OBJEXT)
+	ascii.$(OBJEXT) crypt-mod.$(OBJEXT) safe_asprintf.$(OBJEXT) \
+	sidebar.$(OBJEXT)
 am__objects_1 =
 am__objects_2 = patchlist.$(OBJEXT) $(am__objects_1)
 nodist_mutt_OBJECTS = $(am__objects_2)
@@ -359,7 +360,8 @@ mutt_SOURCES = \
 	score.c send.c sendlib.c signal.c sort.c \
 	status.c system.c thread.c charset.c history.c lib.c \
 	muttlib.c editmsg.c mbyte.c \
-	url.c ascii.c crypt-mod.c crypt-mod.h safe_asprintf.c
+	url.c ascii.c crypt-mod.c crypt-mod.h safe_asprintf.c \
+	sidebar.c
 
 nodist_mutt_SOURCES = $(BUILT_SOURCES)
 mutt_LDADD = @MUTT_LIB_OBJECTS@ @LIBOBJS@ $(LIBIMAP) $(MUTTLIBS) \
@@ -391,7 +393,7 @@ EXTRA_DIST = COPYRIGHT GPL OPS OPS.PGP OPS.CRYPT OPS.SMIME TODO UPDATING \
 	README.SSL smime.h group.h \
 	muttbug pgppacket.h depcomp ascii.h BEWARE PATCHES patchlist.sh \
 	ChangeLog mkchangelog.sh mutt_idna.h \
-	snprintf.c regex.c crypt-gpgme.h hcachever.sh.in
+	snprintf.c regex.c crypt-gpgme.h sidebar.h hcachever.sh.in
 
 EXTRA_SCRIPTS = smime_keys
 mutt_dotlock_SOURCES = mutt_dotlock.c
